--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
   <div id="logo">
-    <img (click)="toggleSidebar.emit()" src="../assets/menu-icon.svg" />
+    <img (click)="toggleSidebar.emit()" src="../assets/images/menu-icon.svg" />
     Frontend Angular Test
   </div>
 </div>
