--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -2,7 +2,7 @@
   #menu {
     display: flex;
     flex-direction: column;
-    padding-top: 10vh;
+    padding-top: 9.5vh;
 
     a {
       text-decoration: none;
@@ -11,6 +11,15 @@
       &:hover {
         background-color: gray
       }
+
+      #item-menu {
+        display: flex;
+        gap: 15px;
+        img {
+          margin-top: -3px;
+        }
+      }
+
     }
   }
 }
