--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,66 @@
-<p>dashboard works!</p>
+<h3 id="title">Dashboard</h3>
+
+<div id="container">
+  <div id="row">
+    <div id="column">
+      <h4>List years with multiple winners</h4>
+      <ag-grid-angular
+        [class]="'ag-theme-quartz'"
+        [rowData]="yearsMultipleWinners"
+        [columnDefs]="yearsMultipleWinnersColDefs"
+        style="margin-top: 10px; width: 100%; height: 25vh;"
+      ></ag-grid-angular>
+    </div>
+    <div id="column">
+      <h4>Top 3 studios with winners</h4>
+      <ag-grid-angular
+        [class]="'ag-theme-quartz'"
+        [rowData]="topThreeStudiosWinners"
+        [columnDefs]="topThreeStudiosWinnersColDefs"
+        style="margin-top: 10px; width: 100%; height: 25vh;"
+      ></ag-grid-angular>
+    </div>
+  </div>
+  
+  <div id="row">
+    <div id="column">
+      <h4>Producers with longest and shortest interval between wins</h4>
+      <div id="panel-subtitle">Maximum</div>
+      <ag-grid-angular
+        [class]="'ag-theme-quartz'"
+        [rowData]="maxWinIntervalProducers"
+        [columnDefs]="maxWinIntervalProducersColDefs"
+        style="margin-top: 10px; width: 100%; height: 14vh;"
+      ></ag-grid-angular>
+      <div id="panel-subtitle">Minimum</div>
+      <ag-grid-angular
+        [class]="'ag-theme-quartz'"
+        [rowData]="minWinIntervalProducers"
+        [columnDefs]="minWinIntervalProducersColDefs"
+        style="margin-top: 10px; width: 100%; height: 14vh;"
+      ></ag-grid-angular>
+    </div>
+    <div id="column">
+      <h4>List movie winners by year</h4>
+      <div id="year-filter">
+        <input
+          type="number"
+          min="0"
+          step="1"
+          placeholder="Search by year"
+          [value]="yearFilter"
+          (input)="onInputChange($event)
+        ">
+        <button (click)="getMoviesWinnersByYear()">
+          <img src="../../../assets/images/search-icon.svg" />
+        </button>
+      </div>
+      <ag-grid-angular
+        [class]="'ag-theme-quartz'"
+        [rowData]="moviesWinnersByYear"
+        [columnDefs]="moviesWinnersByYearColDefs"
+        style="margin-top: 10px; width: 100%; height: 31.5vh;"
+      ></ag-grid-angular>
+    </div>
+  </div>
+</div>
